# NeuralSegmentello

./: .gitignore  README.md  ideas.md  pyproject.toml  requirements.txt  train copy.ipynb  train.ipynb  training_unet_13052025.ipynb  u_net_eval.ipynb
COCO_dset_adaptation/: dataset.ipynb  scratch.ipynb
COCO_dset_adaptation/goku_dset/coarse/: input_coarse_mask_0.npy
COCO_dset_adaptation/plot_dset/gt/: ground_truth_mask_0.npy
COCO_dset_adaptation/plot_dset/image/: input_image_0.npy  input_image_1.npy
COCO_dset_adaptation/reduced_dset/annotations/: instances_train2014.json
dataset/: reduce_dataset.ipynb
dataset/COCO_dset_adaptation/: dataset.ipynb  dataset_preview.ipynb  scratch.ipynb
dataset/COCO_dset_adaptation/goku_dset/gt/: ground_truth_mask_0.npy
docs/: README.md
models/attn32-256_bce-dice-bound/: metrics.csv
models/res16-128_bce-dice/: metrics.csv
models/res16-128_bce-dice-bound/: metrics.csv
models/res16-32_bce-dice/: metrics.csv
models/res16-32_bce-dice/checkpoints/: best-checkpoint.ckpt
models/res32-256_bce-dice-bound/: metrics.csv
models/tiny16-128_bce-dice/: metrics.csv
models/tiny16-128_bce-dice-bound/: metrics.csv
models/tiny16-32_bce-dice/: metrics.csv
models/tiny16-32_bce-dice/checkpoints/: best-checkpoint.ckpt
src/segmentello/: dataset.py  evaluation.py  plotting.ipynb  reducing_dset.py  training.py  u_net.py  u_net_attention_model.py  u_net_eval.py  u_net_model.py  u_net_res_attention.py  u_net_residual.py  u_net_small.py  u_net_tiny.py  u_net_tiny_res.py  u_net_training.py
src/segmentello/data/: config.py  utils.py
(+4 files in other folders)
