[project]
name = "neuralsegmentello"
version = "0.1.0"
description = "A short description"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = "==3.12"

dependencies = [
    "matplotlib==3.10.3",
    "numpy==2.2.5",
    "opencv-python==4.11.0.86",
    "pycocotools==2.0.8",
    "pytorch-lightning==2.5.1.post0",
    "torch==2.7.0",
    "torchmetrics==1.7.1",
    "torchvision==0.22.0",
]


