[project]
name = "neuralsegmentello"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrea Gentilini", email = "agentilini99@gmail.com"},
    {name = "Iacopo Scandale", email = "iacopo.scandale.is@gmail.com"},
    {name = "Leo Petrarca", email = "leopetrarca6@gmail.com"},
    {name = "Michele Magrini", email = "magrini.2066963@studenti.uniroma.it"},
]
requires-python = ">=3.12"

dependencies = [
    "matplotlib==3.10.3",
    "numpy==2.2.5",
    "opencv-python==4.11.0.86",
    "pycocotools==2.0.8",
    "pytorch-lightning==2.5.1.post0",
    "torch==2.7.0",
    "torchmetrics==1.7.1",
    "torchvision==0.22.0",
    "scipy==1.15.1",
    "pandas==2.2.3",
    "ipykernel>=6.29.5",
]
